err/pyprov.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyprov'...
Listing './lib/python3.5/site-packages/pyprov/model'...
Compiling './lib/python3.5/site-packages/pyprov/model/bundle.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/bundle.py", line 97
    print "generate idJSON for %s" % str(element.identifier)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyprov/model/examples'...
Compiling './lib/python3.5/site-packages/pyprov/model/examples/provpyexample.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/examples/provpyexample.py", line 85
    print str(sub)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Account.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Account.py", line 62
    print json.dumps(examplegraph.to_provJSON(),indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Elements.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Elements.py", line 56
    print json.dumps(examplegraph.to_provJSON(),indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Literal.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Literal.py", line 48
    print json.dumps(examplegraph.to_provJSON(),indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Qname_Namespace.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Qname_Namespace.py", line 17
    print "the type of exuri is: %s" % type(exuri)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Relations.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/examples/provpyexample_Relations.py", line 59
    print json.dumps(examplegraph.to_provJSON(),indent=4)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyprov/model/test'...
Compiling './lib/python3.5/site-packages/pyprov/model/test/testexample.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/test/testexample.py", line 80
    print testuri.name
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyprov/model/type.py'...
***   File "./lib/python3.5/site-packages/pyprov/model/type.py", line 71
    if prefix <> 'default':
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyprov-1.0.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
